--- a/index.html
+++ b/index.html
@@ -1,5 +1,25 @@
 <html>
+  <head>
+    <style>
+      body {
+        display: flex;
+        flex-wrap: wrap;
+        align-items: flex-start;
+      }
+      canvas {
+        border: 1px solid;
+        margin: 8px;
+        background-image: url(grid.png);
+      }
+      #c1 {
+        width: 400px;
+        height: 200px;
+      }
+    </style>
+  </head>
   <body>
-    <script src="./index.js"></script>
+    <canvas width="400" height="200" id="c2"></canvas>
+    <canvas width="400" height="200" id="c1"></canvas>
   </body>
+  <script src="./index.js"></script>
 </html>
