--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
   </head>
   <body>
     <div class="canvas-wrap">
+      <b>Paint</b>
+      <canvas width="400" height="200" id="c3"></canvas>
+    </div>
+
+    <div class="canvas-wrap">
       <b>Лінії</b>
       <canvas width="400" height="200" id="c2"></canvas>
     </div>
