--- a/index.html
+++ b/index.html
@@ -1,34 +1,11 @@
 <html>
   <head>
-    <style>
-      body {
-        display: flex;
-        flex-wrap: wrap;
-        align-items: flex-start;
-        font-family: Arial;
-      }
-      canvas {
-        border: 1px solid;
-        margin: 8px;
-        background-image: url(grid.png);
-      }
-      #c1 {
-        width: 400px;
-        height: 200px;
-      }
-      .canvas-wrap {
-        display: flex;
-        flex-direction: column;
-      }
-      b {
-        padding-left: 8px;
-        padding-top: 8px;
-      }
-    </style>
+    <link rel="stylesheet" href="index.css" />
   </head>
   <body>
     <div class="canvas-wrap">
-      <b>Paint</b>
+      <b>Paint <input type="color" id="input-color-c3"/></b>
+
       <canvas width="400" height="200" id="c3"></canvas>
     </div>
 
