--- a/index.html
+++ b/index.html
@@ -4,8 +4,17 @@
   </head>
   <body>
     <div class="canvas-wrap">
-      <b>Paint <input type="color" id="input-color-c3"/></b>
+      <b>Сінус</b>
+      <canvas width="400" height="200" id="c5"></canvas>
+    </div>
 
+    <div class="canvas-wrap">
+      <b>Круги</b>
+      <canvas width="400" height="200" id="c4"></canvas>
+    </div>
+
+    <div class="canvas-wrap">
+      <b>Paint <input type="color" id="input-color-c3"/></b>
       <canvas width="400" height="200" id="c3"></canvas>
     </div>
 
