--- a/index.html
+++ b/index.html
@@ -4,6 +4,16 @@
   </head>
   <body>
     <div class="canvas-wrap">
+      <b>Позиція кривих</b>
+      <canvas width="400" height="200" id="c7"></canvas>
+    </div>
+
+    <div class="canvas-wrap">
+      <b>Фігура на кривих</b>
+      <canvas width="400" height="200" id="c6"></canvas>
+    </div>
+
+    <div class="canvas-wrap">
       <b>Сінус</b>
       <canvas width="400" height="200" id="c5"></canvas>
     </div>
