--- a/index.html
+++ b/index.html
@@ -4,12 +4,17 @@
   </head>
   <body>
     <div class="canvas-wrap">
-      <b>Позиція кривих</b>
+      <b>Фігура на кривих Bezier</b>
+      <canvas width="400" height="200" id="c8"></canvas>
+    </div>
+
+    <div class="canvas-wrap">
+      <b>Контрольна точка квадратичної кривої</b>
       <canvas width="400" height="200" id="c7"></canvas>
     </div>
 
     <div class="canvas-wrap">
-      <b>Фігура на кривих</b>
+      <b>Фігура на квадратичних кривих</b>
       <canvas width="400" height="200" id="c6"></canvas>
     </div>
 
