--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
   </head>
   <body>
     <div class="canvas-wrap">
+      <b>Рух об'єктів</b>
+      <canvas width="400" height="200" id="c11"></canvas>
+    </div>
+
+    <div class="canvas-wrap">
       <b>Рух об'єкта</b>
       <canvas width="400" height="200" id="c10"></canvas>
     </div>
