added move element

--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
+     <div class="canvas-wrap">
+      <b>Рух по траєкторії</b>
+      <canvas width="400" height="200" id="c12"></canvas>
+    </div>
+
     <div class="canvas-wrap">
       <b>Рух об'єктів</b>
       <canvas width="400" height="200" id="c11"></canvas>
