--- a/eventloop.html
+++ b/eventloop.html
@@ -4,5 +4,5 @@
     <link rel="stylesheet" href="index.css" />
   </head>
   <body></body>
-  <script src="./base.js"></script>
+  <script src="./eventloop.js"></script>
 </html>
