--- a/base.html
+++ b/base.html
@@ -4,5 +4,6 @@
     <link rel="stylesheet" href="index.css" />
   </head>
   <body></body>
-  <script src="./base.js"></script>
+  <!--<script src="./base.js"></script>-->
+  <script src="./arr.js"></script>
 </html>
